input buttun stilylin

--- a/frontend_react/src/container/Footer/Footer.scss
+++ b/frontend_react/src/container/Footer/Footer.scss
@@ -35,6 +35,62 @@
     }
     a{
         text-decoration: none;
+        font-weight: 600;
+    }
+    &hover{
+        box-shadow: 0 0 25px rgb(115, 112, 112);
+    }
+    @media screen and(max-width:450px){
+        width: 100%;
     }
   }
+  @media screen and(max-width:760px){
+    width: 100%;
+}
+}
+
+.app__footer-cards .app__footer-card:last-child{
+    background-color: rgb(220, 216, 215);
+}
+.app__footer-form{
+   width: 60%;
+   flex-direction: column;
+   margin: 1rem 2rem;
+
+   div{
+    width: 100%;
+    margin: 0.75rem 0;
+    cursor: pointer;
+    background-color: rgb(239, 243, 243);
+    transition: all 0.3s ease-in-out;
+
+    input, textarea{
+        width: 100%;
+        padding: 1rem;
+        border: none;
+        border-radius: 8px;
+        background-color: rgba(233, 227, 227, 0.268);
+        font-family: var(--font-base);
+        color: var(--secondary-color);
+        outline: none;
+    }
+    textarea{
+        height: 180px;
+    }
+    &hover{
+        box-shadow: 0 10px 25px rgb(115, 112, 112);
+    }
+   }
+   button{
+    padding: 1rem 2rem;
+    border-radius: 10px;
+    border: none;background-color: var(--secondaray-color);
+    font-weight: 500;
+    color: #fff;
+    outline:none;
+    margin: 2rem 0 0 0;
+    
+
+   }
+
 }
